[project]
name = "comfyui-put-image"
description = "Load image from directory."
version = "1.0.3"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/shinich39/comfyui-put-image"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shinich39"
DisplayName = "comfyui-put-image"
Icon = ""
